--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ header{
     background-color: #F5F5F6;
     width: 100vw;
     height: 5vh;
+    min-height: 30px;
 }
 .sec-header{
     display: flex;
@@ -134,6 +135,10 @@ span:last-child{
   border-top-right-radius: 1px;
   border-bottom-right-radius: 1px;
 }
+.purple{
+    background-color: #833AE0;
+    color: white;
+}
 
 @media (min-width:768px) {
     header{
@@ -194,6 +199,10 @@ span:last-child{
 @media (min-width:1024px){
         header{
         height: 7vh;
+        min-height: 50px;
+    }
+    span{
+        min-height: 25px;
     }
 
 }
